<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f6"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_14">

        <LinearLayout
            android:id="@+id/ll_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/logo"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:textColor="#ff333333"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_add_friend"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/chat_red_envelope_icon"
            android:layout_marginLeft="22dp"
            android:visibility="gone"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_search_chat_record"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/im_btn_list_item_bg"
        android:drawableRight="@mipmap/grey_arrow"
        android:text="@string/search_message"
        android:gravity="center_vertical"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/message_notice"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <com.iaowoo.mobile.Ui.classification.View.im.SwitchButton
            android:id="@+id/sw_notice_no_disturb"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswBackMeasureRatio="1.4"
            app:kswThumbDrawable="@mipmap/ios_thumb"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dfdfdd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/set_top"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <com.iaowoo.mobile.Ui.classification.View.im.SwitchButton
            android:id="@+id/sw_conversation_top"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswBackMeasureRatio="1.4"
            app:kswThumbDrawable="@mipmap/ios_thumb"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dfdfdd" />


    <TextView
        android:id="@+id/tv_clean_chat_record"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/im_btn_list_item_bg"
        android:text="@string/clean_message"
        android:gravity="center_vertical"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:layout_marginTop="20dp" />
</LinearLayout>