<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f6"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <com.iaowoo.mobile.Ui.classification.View.im.NestGridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:background="#ffffff"
                android:gravity="start"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_14">

                <RelativeLayout
                    android:id="@+id/rl_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:text="@string/group_name"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/group_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dp_14"
                        android:drawableRight="@mipmap/grey_arrow"
                        android:drawablePadding="@dimen/dp_6"
                        android:textColor="#999"
                        android:textSize="14sp"
                        android:text="22"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/group_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:text="@string/group_code"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:paddingRight="@dimen/dp_14">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:text="@string/group_announcement"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/group_notice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@mipmap/grey_arrow"
                        android:drawablePadding="@dimen/dp_6"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="#999"
                        android:textSize="14sp"
                        android:text="22"/>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_search_chat_record"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_14"
                android:paddingRight="@dimen/dp_14"
                android:text="@string/search_message"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:drawableRight="@mipmap/grey_arrow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/message_notice"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <com.iaowoo.mobile.Ui.classification.View.im.SwitchButton
                    android:id="@+id/sw_group_notice_no_disturb"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@mipmap/ios_thumb"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="#dfdfdd" />

            <LinearLayout
                android:id="@+id/ll_group_member_nickname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="显示群成员昵称"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <com.iaowoo.mobile.Ui.classification.View.im.SwitchButton
                    android:id="@+id/sw_show_group_member_nickname"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@mipmap/ios_thumb"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="#dfdfdd" />

            <LinearLayout
                android:id="@+id/ll_group_my_nickname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="@dimen/dp_14"
                android:paddingRight="@dimen/dp_14"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="我在本群昵称"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_group_my_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="aa"
                    android:drawableRight="@mipmap/grey_arrow"
                    android:drawablePadding="@dimen/dp_6"/>
            </LinearLayout>



            <TextView
                android:id="@+id/tv_clean_chat_record"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_14"
                android:paddingRight="@dimen/dp_14"
                android:text="@string/clean_message"
                android:textColor="@color/text_color"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/group_quit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/common_btn_selector"
                android:text="@string/quit_group"
                android:textColor="#FFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/group_dismiss"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/common_btn_selector"
                android:text="@string/dismiss_group"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>