<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f6"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/group_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:background="#ffffff"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_user_portrait"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/logo"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_remark_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff333333"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_contact_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="PuChat号：1343324123"
                android:textColor="#ff666666"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#ff666666"
                android:textSize="11sp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/user_online_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>


    <TextView
        style="@style/text_black_13"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="17dp"
        android:paddingLeft="@dimen/dp_14"
        android:paddingRight="@dimen/dp_13"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/setdisplayname"
        android:textSize="14sp"
        android:drawableRight="@mipmap/grey_arrow"/>

    <LinearLayout
        android:id="@+id/ll_personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="17dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_13"
            android:gravity="center_vertical">

            <TextView
                style="@style/text_black_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="地区" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:layout_marginLeft="@dimen/dp_10"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_20"
            android:gravity="center_vertical">

            <TextView
                style="@style/text_black_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="个性签名"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_personal_slogan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp_10"
                android:gravity="right|center_vertical"
                android:textColor="#999999"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_send_msg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_btn_selector"
        android:text="发消息"
        android:textColor="#FFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_add_friend"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_btn_selector"
        android:text="@string/add_friend"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_delete_friend"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_btn_selector"
        android:text="@string/delete_friend"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>